handle reset password flow

--- a/src/features/auth/forget-password/forget-password.component.html
+++ b/src/features/auth/forget-password/forget-password.component.html
@@ -24,10 +24,10 @@
         @if(forgot_pass_form.get('email')?.errors && forgot_pass_form.get('email')?.touched){
         <div>
           @if(forgot_pass_form.get('email')?.getError('required')){
-          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.EMAIL_REQ' | translate }}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{ 'AUTH.EMAIL_REQ' | translate }}</p>
           }
           @if(forgot_pass_form.get('email')?.getError('email')){
-          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.EMAIL_VAILD' | translate }}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{ 'AUTH.EMAIL_VAILD' | translate }}</p>
           }
         </div>
         }
@@ -35,7 +35,8 @@
 
 
       <div class="auth_btn">
-        <p-button [loading]="isLoading()" [label]="'AUTH.SEND_OTP' | translate" [disabled]="forgot_pass_form.invalid" />
+        <p-button [loading]="isLoading()" (onClick)="handleForgetPassword()" [label]="'AUTH.SEND_OTP' | translate"
+          [disabled]="forgot_pass_form.invalid" />
       </div>
     </form>
   </div>
