--- a/src/features/auth/update-password/update-password.component.html
+++ b/src/features/auth/update-password/update-password.component.html
@@ -25,11 +25,11 @@
         @if(update_password_form.get('new_password')?.errors && update_password_form.get('new_password')?.touched){
         <div>
           @if(update_password_form.get('new_password')?.getError('required')){
-          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.NEW_PASSWORD_REQ' | translate }}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{ 'AUTH.NEW_PASSWORD_REQ' | translate }}</p>
           }
           @if(update_password_form.get('new_password')?.getError('inVaild')){
           @for(error of passwordValidationError ; track error){
-          <p class="p-2 text-sm text-danger_color m-0">{{error}}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{error}}</p>
           }
           }
         </div>
@@ -51,16 +51,16 @@
         update_password_form.get('confirm_password')?.touched){
         <div>
           @if(update_password_form.get('confirm_password')?.getError('required')){
-          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.CONFIRM_PASSWORD_REQ' | translate }}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{ 'AUTH.CONFIRM_PASSWORD_REQ' | translate }}</p>
           }
           @if(update_password_form.get('confirm_password')?.getError('passwordMismatch')){
-          <p class="p-2 text-sm text-danger_color m-0">{{ 'AUTH.PASSWORDS_DONT_MATCH' | translate }}</p>
+          <p class="p-2 text-sm text-white_color m-0">{{ 'AUTH.PASSWORDS_DONT_MATCH' | translate }}</p>
           }
         </div>
         }
       </div>
       <div class="auth_btn">
-        <p-button [loading]="isLoading()" [label]="'AUTH.UPDATE_PASSWORD' | translate"
+        <p-button [loading]="isLoading()" (onClick)="updatePassword()" [label]="'AUTH.UPDATE_PASSWORD' | translate"
           [disabled]="update_password_form.invalid" />
       </div>
     </form>
