complete handled update roles

--- a/src/features/dashboard/roles-managment/role-action/role-action.component.html
+++ b/src/features/dashboard/roles-managment/role-action/role-action.component.html
@@ -1,5 +1,5 @@
 <section class="bg-white_color rounded-3xl p-8">
-  <h2></h2>
+  <h2 class="text-primary font-semibold text-xl mb-6">{{current_update_id ? 'Update Role':"Add New Role"}}</h2>
   <form [formGroup]="role_form" class="devices_types__container grid grid-cols-12 gap-6 mb-8">
 
     <div class="form-group col-span-12">
