--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,3 +227,17 @@ i.pass_toggle {
 .p-link.p-highlight{
   @apply bg-primary text-white_color;
 }
+
+
+.action_icon{
+  @apply flex items-center justify-center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid #FFFFFF;
+  box-shadow: 0px 4px 15px 0px #00000040;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
