complete role managmement

--- a/src/features/dashboard/roles-managment/role-view/role-view.component.scss
+++ b/src/features/dashboard/roles-managment/role-view/role-view.component.scss
@@ -165,6 +165,15 @@
   }
 }
 
+.icon img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
 
 .icon_filter {
   width: 40px;
