--- a/src/features/dashboard/roles-managment/role-view/role-view.component.html
+++ b/src/features/dashboard/roles-managment/role-view/role-view.component.html
@@ -34,12 +34,39 @@
 
 
 
-  <div class="grid grid-cols-12">
-    <!-- <div class=" col-span-12 lg:col-span-6 p-6 rounded-xl bg-white_color">
+  <div class="grid grid-cols-12 gap-12">
+    <div class=" col-span-12 lg:col-span-6 p-6 rounded-xl bg-white_color">
       <h3 class="text-xl font-semibold mb-4">Selected User</h3>
 
-    </div> -->
-    <div class=" col-span-12 lg:col-span-12 p-6 rounded-xl bg-white_color">
+
+
+      <div class="users flex flex-col gap-4">
+        <div class="adon-input relative w-full">
+          <input (input)="handleSearch()" [(ngModel)]="searchTerm" pInputText
+            [placeholder]="'USERS.SEARCH_PLACEHOLDER' | translate" />
+          <i class="fi fi-rr-search text-xl flex items-center justify-center text-gray_light"></i>
+        </div>
+
+
+
+        <div class="users_list-container  flex-1 overflow-y-auto">
+          @for(user of current_role_data?.users ; track user){
+          <div class="border flex mb-2   items-center gap-4 border-gray_light rounded-lg p-4">
+            <div class="icon">
+              <img class="shadow-sm" [src]="user?.photo" alt="">
+            </div>
+            <div class="content">
+              <h2>{{user?.name}}</h2>
+              <p>{{user?.email}}</p>
+            </div>
+          </div>
+          }
+        </div>
+
+
+      </div>
+    </div>
+    <div class=" col-span-12 lg:col-span-6 p-6 rounded-xl bg-white_color">
       <h3 class="text-xl font-semibold mb-4">Permission Categories</h3>
 
       <p-accordion [expandIcon]="'fi fi-rr-angle-small-down'" [collapseIcon]="'fi fi-rr-angle-small-up'"
@@ -47,20 +74,21 @@
         @for(device of devicesTypes() ; track device){
 
         <p-accordionTab tabStyleClass="mb-4" [header]="device.deviceType">
-          <div class="flex items-center flex-wrap justify-between">
+          <div class=" ">
             @for(dev of device?.devices ; track dev){
-            <div class="flex items-center gap-4">
-              <p-checkbox [disabled]="true" [binary]="true" [(ngModel)]="dev.is_selected_all" inputId="binary" />
+            <div class="flex items-center gap-4 mb-2">
 
               <h3 class="font-bold text-lg">{{dev?.deviceName}}</h3>
             </div>
-            @for(per of dev?.permissions ; track per){
+            <div class="flex items-center justify-between">
+              @for(per of dev?.permissions ; track per){
 
-            <div class="input_group flex items-center gap-2 flex-row-reverse">
-              <label for="">{{ per?.name }}</label>
-              <p-checkbox [disabled]="true" [binary]="true" [(ngModel)]="per.isSelected" inputId="binary" />
+              <div class="input_group flex items-center gap-2 flex-row-reverse">
+                <label for="">{{ per?.name }}</label>
+                <p-checkbox [disabled]="true" [binary]="true" [(ngModel)]="per.isSelected" inputId="binary" />
+              </div>
+              }
             </div>
-            }
             }
           </div>
         </p-accordionTab>
