--- a/src/features/dashboard/devices/chart-vs341/chart-vs341.component.html
+++ b/src/features/dashboard/devices/chart-vs341/chart-vs341.component.html
@@ -34,7 +34,7 @@
             [label]="'DEVICES.APPLY' | translate" />
 
           @if(!isApplyDisabled_bars()){
-          <button (click)="cancelAllFilters()">
+          <button (click)="cancelAllFiltersBars()">
             <i class="fi text-lg fi-rr-circle-xmark"></i>
           </button>
           }
@@ -56,7 +56,7 @@
     </div>
     }
     <div [class]="{'hidden': loadingChart_bars() || !current_chart_data_bars().length}" class="chart overflow-x-auto">
-      <p-chart #alarms_chart_1 type="bar" height="400px" [width]="chartWidth+'%'" [data]="data_alarms_1"
+      <p-chart #alarms_chart_1 type="bar" height="400px" [width]="chartWidthBar()+'%'" [data]="data_alarms_1"
         [options]="optionsAlarm_1" />
     </div>
   </div>
@@ -120,8 +120,8 @@
       {{"DEVICES.No_Data_Avaliable"|translate}}
     </div>
     }
-    <div [class]="{'hidden': loadingChart() || !current_chart_data().length}" class="chart overflow-x-auto">
-      <p-chart #alarms_chart type="line" height="400px" [width]="chartWidth+'%'" [data]="data_alarms"
+    <div [class]="{'hidden': loadingChart() || !current_chart_data().length}" class="overflow-x-auto">
+      <p-chart #alarms_chart type="line" height="400px" [width]="chartWidth()+'%'" [data]="data_alarms"
         [options]="optionsAlarm" />
     </div>
   </div>
