handel chart dos

--- a/src/features/dashboard/devices/chart-vs341/chart-vs341.component.html
+++ b/src/features/dashboard/devices/chart-vs341/chart-vs341.component.html
@@ -63,7 +63,7 @@
 </section>
 
 
-<section class="pt-6">
+<!-- <section class="pt-6">
   <div
     class="col-span-12 p-6 px-12 mb-6 flex-wrap rounded-full bg-white_color shadow flex items-center justify-between">
 
@@ -125,7 +125,7 @@
         [options]="optionsAlarm" />
     </div>
   </div>
-</section>
+</section> -->
 
 
 
