handle add alarm template

--- a/src/features/dashboard/alarms/alaram-action/alaram-action.component.html
+++ b/src/features/dashboard/alarms/alaram-action/alaram-action.component.html
@@ -117,7 +117,8 @@
       <p-button label="Cancel " />
     </div>
     <div class="action_btn ">
-      <p-button [disabled]="alarm_form.invalid" [label]="currentUpdateId ? ' Update Alarm' :'Add Alarm'" />
+      <p-button [loading]="load_action()" (onClick)="handleAlarmAction()" [disabled]="alarm_form.invalid"
+        [label]="currentUpdateId ? ' Update Alarm' :'Add Alarm'" />
     </div>
   </div>
 </section>
