--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,7 +66,8 @@ i {
   }
 }
 
-.p-inputtext {
+.p-inputtext,
+textarea {
   @apply bg-white_color rounded-3xl;
   width: 100%;
   padding: .8rem 1.5rem;
@@ -78,6 +79,12 @@ i {
   }
 }
 
+textarea{
+  resize: none;
+  &:focus{
+    outline: none;
+  }
+}
 
 .input_icon_group {
   position: relative;
