handle delete notification

--- a/src/features/dashboard/notification/list/list.component.html
+++ b/src/features/dashboard/notification/list/list.component.html
@@ -65,7 +65,7 @@
 <p-menu #menu appendTo="body" styleClass="namespace_action" [model]="items" [popup]="true" />
 
 
-<!-- <p-dialog (onHide)="confirm_input.value = '' ; current_id_selected = null" header="" styleClass="select_type_popup"
+<p-dialog (onHide)="confirm_input.value = '' ; current_id_selected = null" header="" styleClass="select_type_popup"
   [(visible)]="showDeletePopUp" [dismissableMask]="true" [modal]="true"
   [breakpoints]="{ '1199px': '50vw', '575px': '90vw' }" [style]="{ width: '40vw' }" [draggable]="false"
   [resizable]="false">
@@ -88,7 +88,7 @@
 
   </div>
   <div class=" text-center mb-8">
-    <h5 class="text-2xl  text-primary font-medium ">Delete Alarm</h5>
+    <h5 class="text-2xl  text-primary font-medium ">Delete Notification Group</h5>
     <p class="text-primary/50">{{ 'DEVICES.DELETE_CONFIRM_MSG' | translate }} <strong>{{ 'DEVICES.DELETE' | translate
         }}</strong> </p>
   </div>
@@ -109,4 +109,4 @@
       </div>
     </div>
   </ng-template>
-</p-dialog> -->
+</p-dialog>
